--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aes = "0.8.1"
 anyhow = "1.0.60"
 binread = "2.1.1"
 binwrite = "0.2.1"
 clap = "3.2.16"
+ctr = "0.9.1"
 hmac-sha256 = "1.1.4"
 rand = "0.8.4"
 rayon = "1.5.1"
 rc4 = "0.1.0"
-rust-crypto = "0.2.36"
 sha-1 = "0.10.0"
 sha2 = "0.10.2"
